--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,13 @@
         "default_popup": "popup.html"
     },
     "content_scripts": [{
-            "matches": ["http://blearning.remotedu.com/*"],
-            "js": ["./cheat.js"],
-            "run_at": "document_start"
-        }
-    ]
+        "matches": ["http://blearning.remotedu.com/*"],
+        "js": ["./cheat.js"],
+        "run_at": "document_start"
+    }],
+    "browser_action": {
+        "default_icon": "icon.png",
+        "default_title": "setting",
+        "default_popup": "popup.html"
+    }
 }
